bk_ida/gccida/c1/error_for_asm
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/error_for_asm/src/rtl-error.c:559:47: error: expected expression
diagnostic_for_asm( insn, msgid, ( va_list_0 *)va, 0); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/error_for_asm/src/rtl-error.c:559:36: error: use of undeclared identifier 'va_list_0'
diagnostic_for_asm( insn, msgid, ( va_list_0 *)va, 0); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/error_for_asm/src/obj/rtl-error.o] Error 1
